--- a/themes/custom/chain/templates/region/region--navigation.html.twig
+++ b/themes/custom/chain/templates/region/region--navigation.html.twig
@@ -5,5 +5,45 @@ attributes for the region
   . * - region: The name of the region variable as defined in the theme's *
   .info.yml file. * * @see template_preprocess_region() */ #}
 
-  {{ content }}
+  <header
+    class="header-area header-sticky wow slideInDown"
+    data-wow-duration="0.75s"
+    data-wow-delay="0s"
+  >
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <nav class="main-nav">
+            <!-- ***** Logo Start ***** -->
+            <a href="index.html" class="logo">
+              <img src="assets/images/logo.png" alt="Chain App Dev" />
+            </a>
+            <!-- ***** Logo End ***** -->
+            <!-- ***** Menu Start ***** -->
+            <ul class="nav">
+              <li class="scroll-to-section">
+                <a href="#top" class="active">Home</a>
+              </li>
+              <li class="scroll-to-section">
+                <a href="#services">Services</a>
+              </li>
+              <li class="scroll-to-section"><a href="#about">About</a></li>
+              <li class="scroll-to-section"><a href="#pricing">Pricing</a></li>
+              <li class="scroll-to-section">
+                <a href="#newsletter">Newsletter</a>
+              </li>
+              <li>
+                <div class="gradient-button">
+                  <a id="modal_trigger" href="#modal"
+                    ><i class="fa fa-sign-in-alt"></i> Sign In Now</a
+                  >
+                </div>
+              </li>
+            </ul>
+            <!-- ***** Menu End ***** -->
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header>
 </div>
