Add hero section

--- a/themes/custom/chain/templates/page--front.html.twig
+++ b/themes/custom/chain/templates/page--front.html.twig
@@ -35,4 +35,5 @@ the footer region. * * @ingroup templates * * @see template_preprocess_page() *
 #}
 <!-- ***** Header Area End ***** -->
 {{ page.navigation }}
+{{ page.hero }}
 <!-- ***** Header Area End ***** -->
