--- a/themes/custom/chain/templates/page.html.twig
+++ b/themes/custom/chain/templates/page.html.twig
@@ -27,4 +27,5 @@ template_preprocess_page() * @see html.html.twig */ #}
 <header class="header-area header-sticky">
   {{ page.navigation }}
 </header>
+{{ page.service }}
 <!-- ***** Header Area End ***** -->
