--- a/themes/custom/chain/templates/menu/menu--main.html.twig
+++ b/themes/custom/chain/templates/menu/menu--main.html.twig
@@ -25,15 +25,15 @@
   We call a macro which calls itself to render the full tree.
   @see https://twig.symfony.com/doc/1.x/tags/macro.html
 #}
-{{ menus.menu_links(items, attributes, 0) }}
 
+{{ menus.menu_links(items, attributes, 0) }}
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
     {% if menu_level == 0 %}
-      <ul{{ attributes }}>
+      <ul class="nav">
     {% else %}
-      <ul>
+      <ul class="nav">
     {% endif %}
     {% for item in items %}
       <li{{ item.attributes }}>
@@ -43,6 +43,7 @@
         {% endif %}
       </li>
     {% endfor %}
+         <li><div class="gradient-button"><a id="modal_trigger" href="#modal"><i class="fa fa-sign-in-alt"></i> Sign In Now</a></div></li> 
     </ul>
   {% endif %}
 {% endmacro %}
