Add images to drupal via file upload && use the url in the theme

--- a/themes/custom/chain/templates/block/block--chain-main-menu.html.twig
+++ b/themes/custom/chain/templates/block/block--chain-main-menu.html.twig
@@ -1,6 +1,9 @@
 <nav role="navigation" class="main-nav">
-  <a href="index.html" class="logo">
-    <img src="../../assets/images/logo.png" alt="Chain App Dev" />
+  <a href="/" class="logo">
+    <img
+      src="http://localhost/web/webapp/web/sites/default/files/inline-images/white-logo.png"
+      alt="Chain App Dev"
+    />
   </a>
   {% block content %}
   {{ content }}
