--- a/themes/custom/chain/templates/block/block--hero.html.twig
+++ b/themes/custom/chain/templates/block/block--hero.html.twig
@@ -25,7 +25,10 @@
               data-wow-duration="1s"
               data-wow-delay="0.5s"
             >
-              <img src="../../assets/images/slider-dec.png" alt="" />
+              <img
+                src="http://localhost/web/webapp/web/sites/default/files/inline-images/slider-dec.png"
+                alt=""
+              />
             </div>
           </div>
         </div>
