Add service custom block

--- a/themes/custom/chain/templates/page--front.html.twig
+++ b/themes/custom/chain/templates/page--front.html.twig
@@ -35,5 +35,10 @@ the footer region. * * @ingroup templates * * @see template_preprocess_page() *
 #}
 <!-- ***** Header Area End ***** -->
 {{ page.navigation }}
-{{ page.hero }}
 <!-- ***** Header Area End ***** -->
+{{ page.hero }}
+{{ page.service }}
+{{ page.about }}
+{{ page.pricing }}
+{{ page.newsletter }}
+{{ page.footer }}
