Add about block

--- a/themes/custom/chain/templates/region/region--about.html.twig
+++ b/themes/custom/chain/templates/region/region--about.html.twig
@@ -2,4 +2,7 @@
 - content: The content for this region, typically blocks. * - attributes: HTML
 attributes for the region . * - region: The name of the region variable as
 defined in the theme's * .info.yml file. * * @see template_preprocess_region()
-*/ #} {{ content }}
+*/ #}
+<div id="about" class="about-us section">
+  <div class="container">{{ content }}</div>
+</div>
