--- a/themes/custom/chain/templates/region/region--service.html.twig
+++ b/themes/custom/chain/templates/region/region--service.html.twig
@@ -1,5 +1,1 @@
-{# /** * @file * Theme override to display a region. * * Available variables: *
-- content: The content for this region, typically blocks. * - attributes: HTML
-attributes for the region . * - region: The name of the region variable as
-defined in the theme's * .info.yml file. * * @see template_preprocess_region()
-*/ #} {{ content }}
+{{ content }}
